[gd_scene load_steps=4 format=3 uid="uid://n0u05b845an0"]

[ext_resource type="Script" uid="uid://ppf1jkq3uayl" path="res://scripts/ui/day_night_cycle_ui.gd" id="1_ukgtc"]
[ext_resource type="FontFile" uid="uid://f27fgiuf0h5d" path="res://assets/fonts/MinecraftRegular-Bmg3.otf" id="2_ukgtc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ukgtc"]
bg_color = Color(0.768627, 0.603922, 0.423529, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.564706, 0.384314, 0.364706, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="DayNightCycleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ukgtc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 512.0
offset_right = 200.0
offset_bottom = 640.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ukgtc")

[node name="CenterContainer2" type="CenterContainer" parent="Panel"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 64.0

[node name="DayLabelBackground" type="Label" parent="Panel/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ukgtc")
theme_override_font_sizes/font_size = 34
text = "day"
vertical_alignment = 1

[node name="DayLabel" type="Label" parent="Panel/CenterContainer2/DayLabelBackground"]
unique_name_in_owner = true
layout_mode = 0
theme_override_fonts/font = ExtResource("2_ukgtc")
theme_override_font_sizes/font_size = 34
text = "day"
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 0
offset_top = 64.0
offset_right = 192.0
offset_bottom = 128.0

[node name="TimeLabelBackground" type="Label" parent="Panel/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ukgtc")
theme_override_font_sizes/font_size = 34
text = "time"
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="Panel/CenterContainer/TimeLabelBackground"]
unique_name_in_owner = true
layout_mode = 0
theme_override_fonts/font = ExtResource("2_ukgtc")
theme_override_font_sizes/font_size = 34
text = "time"
vertical_alignment = 1
